# FlashX

./: .gitignore  .index.html.swp  .travis.yml  CMakeLists.txt  CNAME  FlashR-programming-tutorial.html  GClock_unit_test.cpp  LRU2Q.h  Makefile  Makefile.SAFS  Makefile.common  NUMA_cache.h  README  README.md  SAHT_unit_test.cpp  SA_hash_table.cpp  SA_hash_table.h  _config.yml  access_mapper.h  aio_private.cc  aio_private.cpp  aio_private.h  associative_cache.cpp  associative_cache.h  cache.cpp  cache.h  cache_config.cpp  cache_config.h  caching_experiments.sh  common.cpp  common.h  concurrency.h  config.h  config.h.in  container.cpp  container.h  create_file.c  create_file.sh  cuckoo_cache.cpp  cuckoo_cache.h  (+67 more)
Rpkg/: DESCRIPTION  NAMESPACE  aclocal.m4  configure  configure.ac  create_Rpkg.sh
Rpkg/R/: ASE.R  FlashR.R  FlashR_base.R  FlashR_stats.R  GMM.R  KMeans.R  LOL.R  SVD.R  eigen.R  flashgraph.R  flashmatrix.R  flashmatrix_ext.R  flashmatrix_tmp.R  getElbows.R  grad.desc.R  graph-algs.R  graphics.R  regression.R
Rpkg/demo/: IRLM.R  hierarical.spec.cluster.R  test.cc.R
Rpkg/man/: Arithmetic.Rd  Comparison.Rd  Extract.Rd  Extremes.Rd  Logic.Rd  MathFun.Rd  NA.Rd  all.Rd  any.Rd  colSums.Rd  cor.Rd  cov.wt-fm-method.Rd  cov.wt.Rd  crossprod.Rd  dim.Rd  dimnames.Rd  drop-fm-method.Rd  drop.Rd  fg.ase.Rd  fg.betweenness.Rd  fg.cc.Rd  fg.degree.Rd  fg.diameter.Rd  fg.eigen.Rd  fg.exist.graph.Rd  fg.export.graph.Rd  fg.graph.info.Rd  fg.kcore.Rd  fg.kmeans.Rd  fg.lcc.Rd  fg.list.graph.Rd  fg.load.graph.Rd  fg.local.scan.Rd  fg.multiply.Rd  fg.pagerank.Rd  fg.sem.kmeans.Rd  fg.set.conf.Rd  fg.spectral.Rd  fg.subgraph.Rd  fg.transitivity.Rd  (+89 more)
Rpkg/pureR/: computerank.R  distance.R  nbinstar.R  procrustes.R  reliability.R  semipar.R
Rpkg/src/: Makevars  Makevars.in  Rconn.c  Rconn.h  config.h  fm_utils.cpp  fm_utils.h  fmr_isna.h  fmr_utils.cpp  fmr_utils.h  matrix_interface.cpp  matrix_ops.cpp  matrix_ops.h  matrix_tmp.cpp  rinterface.cpp  rutils.cpp  rutils.h
Rpkg/tests/: testthat.R
flash-graph/: CMakeLists.txt  FG_basic_types.h  FG_vector.h  FGlib.cpp  FGlib.h  Makefile  bitmap.h  fake_index.h  fg_sparse_matrix.cpp  fg_utils.cpp  fg_utils.h  graph.cpp  graph.h  graph_config.cpp  graph_config.h  graph_engine.cpp  graph_engine.h  graph_exception.h  graph_file_header.h  graph_index.h  in_mem_storage.cpp  in_mem_storage.h  knors_index.h  load_balancer.cpp  load_balancer.h  message_processor.cpp  message_processor.h  messaging.cpp  messaging.h  partitioner.cpp  partitioner.h  pthread_barrier.cpp  pthread_barrier.h  scan_pointer.h  stat.h  steal_state.h  trace_logger.h  ts_graph.cpp  ts_graph.h  utils.cpp  (+19 more)
flash-graph/LOL/: CMakeLists.txt  LOL.cpp  Makefile  m2g.cpp  mnist_io.cpp  mnist_io.h  print_mnist.cpp
flash-graph/Rbinding/: flashgraph.R
flash-graph/Rpkg/: DESCRIPTION
flash-graph/bindings/: CGraph.h  Makefile  testit.cpp
flash-graph/clustering/: Makefile  k_means.cpp  matrix_k_means.cpp
flash-graph/conf/: data_files.txt  run_bfs.txt  run_bfs_mem.txt  run_graph.txt  run_lp.txt  run_lp_mem.txt  run_test.txt  run_triangle.txt  run_triangle_mem.txt  run_triangle_preload.txt
flash-graph/connected-components/: Makefile  cc.cpp  scc.cpp  wcc.cpp
flash-graph/diameter-estimator/: diameter_graph.cpp  serial_diameter_graph.cpp
flash-graph/eigensolver/: Makefile  eigensolver.cpp  matrix_eigensolver.cpp
flash-graph/graph-bfs/: CMakeLists.txt  Makefile  bfs_graph.cpp  bfs_undirected_graph.cpp
flash-graph/graph-stat/: CMakeLists.txt  Makefile  stat_graph.cpp
flash-graph/graphlab/: cuckoo_set_pow2.hpp
flash-graph/k-core/: CMakeLists.txt  k_core.cpp
flash-graph/libgraph-algs/: CMakeLists.txt  Makefile  betweeness_centrality.cpp  betweenness_centrality.cpp  bfs_graph.cpp  closeness_centrality.cpp  cluster.h  clusters.cpp  clusters.h  cycle_triangle_cpp.cpp  diameter_graph.cpp  directed_triangle_graph.cpp  dist_matrix.cpp  dist_matrix.h  diversity.cpp  fast_triangle_graph.cpp  graph_transitivity.cpp  helper.hpp  k_core.cpp  kmeans_types.h  local_scan2_graph.cpp  local_scan_graph.cpp  louvain.cpp  min_triangle_sem_kmeans.cpp  overlap.cpp  page_rank.cpp  prune_stats.h  rinterface.cpp  row_cache.h  save_result.h  scan_graph.cpp  scan_graph.h  scc.cpp  sem_kmeans.cpp  sem_kmeans.h  sem_kmeans_util.h  sstsg.cpp  topK_scan_graph.cpp  topo_sort.cpp  topological.hpp  (+6 more)
flash-graph/matrix/: ASE.cpp  ASE.h  CMakeLists.txt  FG_dense_matrix.h  FG_sparse_matrix.cpp  FG_sparse_matrix.h  IRLM.R  Makefile  base_kmeans_coordinator.cpp  base_kmeans_coordinator.h  base_kmeans_thread.h  kmeans.cpp  kmeans.h  kmeans_coordinator.cpp  (+13 more)
libsafs/: CMakeLists.txt  LRU2Q.h  Makefile  NUMA_cache.h  NUMA_mapper.cpp  NUMA_mapper.h  RAID_config.cpp  RAID_config.h  aio_private.cpp  aio_private.h  aligned_allocator.h  associative_cache.cpp  associative_cache.h  cache.cpp  cache.h  cache_config.cpp  cache_config.h  comm_exception.h  common.cpp  common.h  common_c.h  comp_io_scheduler.cpp  comp_io_scheduler.h  compute_stat.h  concurrency.h  config_map.cpp  config_map.h  container.h  debugger.cpp  debugger.h  direct_comp_access.cpp  direct_comp_access.h  direct_private.cpp  direct_private.h  dirty_page_flusher.h  disk_read_thread.cpp  disk_read_thread.h  file_mapper.cpp  file_mapper.h  file_partition.h  (+44 more)
matrix/: CMakeLists.txt  EM_dense_matrix.cpp  EM_dense_matrix.h  EM_object.cpp  EM_object.h  EM_vector.cpp  EM_vector.h  EM_vv_store.cpp  EM_vv_store.h  IPW_matrix_store.cpp  IPW_matrix_store.h  Makefile  NUMA_dense_matrix.cpp  NUMA_dense_matrix.h  NUMA_mapper.h  NUMA_vector.cpp  NUMA_vector.h  agg_matrix_store.cpp  agg_matrix_store.h  block_matrix.cpp  block_matrix.h  bulk_operate.cpp  bulk_operate.h  bulk_operate_ext.h  bulk_operate_impl.h  cached_matrix_store.cpp  cached_matrix_store.h  col_vec.cpp  col_vec.h  combined_matrix_store.cpp  combined_matrix_store.h  cum_matrix.cpp  cum_matrix.h  data_frame.cpp  data_frame.h  data_io.cpp  data_io.h  dense_matrix.cpp  dense_matrix.h  factor.cpp  (+86 more)
utils/: CMakeLists.txt  FileManager.h  Makefile  SAFS-del  SAFS-util.cpp  SAFS-util.h  tbrmd.txt  test-fm.cpp
(+1575 files in other folders)
